--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,7 @@ fastapi==0.78.0
 uvicorn[standard]~=0.15.0
 aiosqlite==0.17.0
 greenlet==1.1.2
-requests
+requests==2.28.1
+types-SQLAlchemy==1.4.45
+# sqlalchemy[mypy]
+sqlalchemy2-stubs==0.0.2a24
