--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,9 @@ stages:
 before_script:
     - pip install sqlalchemy[mypy]
     - pip install -r requirements.txt
+    - git clone https://github.com/python/mypy.git
+    - cd mypy
+    - sudo python3 -m pip install --upgrade .
 
 unittest:
   stage: test
